[package]
name = "sf_train"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clearscreen = "2.0.1"
crossterm = "0.27.0"
rustyline = "12.0.0"
